@@ -1,4 +1,4 @@
-.\" RCSid $Id: dctimestep.1,v 1.11 2015/05/04 20:53:21 greg Exp $"
+.\" RCSid $Id: dctimestep.1,v 1.12 2015/07/14 16:08:28 greg Exp $"
 .TH DCTIMESTEP 1 12/09/09 RADIANCE
 .SH NAME
 dctimestep - compute annual simulation time-step(s) via matrix multiplication
@@ -33,7 +33,7 @@ dctimestep - compute annual simulation time-step(s) via matrix multiplication
 .B "\-o{f|d}
 ]
 .B Vspec
-.B Tbsdf.xml
+.B Tbsdf
 .B Dmat.dat
 [
 .B skyf
@@ -57,36 +57,36 @@ The first argument is the View matrix file that specifies how window output
 directions are related to some set of measured values, such as an array of
 illuminance points or images.
 This matrix is usually computed by
+.I rfluxmtx(1)
+or
 .I rcontrib(1)
 for a particular set of windows or skylight openings.
 The second argument is the window transmission matrix, or BSDF, given as
-a standard XML description.
+a matrix or a standard XML description.
 The third argument is the Daylight matrix file that defines how sky patches
 relate to input directions on the same opening.
 This is usually computed using
-.I genklemsamp(1)
-with
-.I rcontrib
-in a separate run for each window or skylight orientation.
+.I rfluxmtx
+with separate runs for each window or skylight orientation.
 The last file is the sky contribution vector or matrix,
 typically computed by
 .I genskyvec(1)
 or
 .I gendaymtx(1),
 and may be passed on the standard input.
-This data is assumed by default to be in ASCII format, whereas the
-formats of the View and Daylight matrices
-are detected automatically if given as binary data.
 .PP
 If the input sky data lacks a header, the
 .I \-n
 option may be used to indicate the number of time steps, which
 will be 1 for a sky vector.
 The sky input file must contain the number of
-columns specified in each sky patch row, whether it is read
-from the standard input or from a file.
+columns (time steps) specified in each sky patch row,
+whether it is read from the standard input or from a file.
 Input starts from the first patch at the first time step, then the
 first patch at the second time step, and so on.
+Note that all matrix elements are RGB triplets, so the actual size
+of the sky vector or matrix is three times the number of steps times
+the number of sky patches.
 The
 .I \-if
 or
@@ -157,12 +157,16 @@ using a 3-phase calculation, where output columns are time steps:
 .IP "" .2i
 gendaymtx -of Tampa.wea | dctimestep WPpts.vmx
 shade3.xml Skylight3.dmx > wp_win3.dat
-.IP "" .2i
 .PP
 Generate a series of pictures corresponding to timesteps
 in an annual simulation:
 .IP "" .2i
 gendaymtx NYCity.wea | dctimestep -o tstep%04d.hdr dcomp%03d.hdr
+.PP
+To multiply an irradiance view matrix through a pair of XML window layers using
+a given exterior daylight matrix and sky vector:
+.IP "" .2i
+dctimestep Illum.vmx "!rmtxop -ff Blinds1.xml Windo1.xml" Exter.dmx Jan20.sky
 .PP
 To multiply two matrices into a IEEE-float result with header:
 .IP "" .2i
@@ -170,5 +174,6 @@ dctimestep -of Inp1.fmx Inp2.fmx > Inp1xInp2.fmx
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-gendaymtx(1), genklemsamp(1), genskyvec(1), getinfo(1),
-mkillum(1), rcollate(1), rcontrib(1), rmtxop(1), rtrace(1), vwrays(1)
+gendaymtx(1), genskyvec(1), getinfo(1),
+mkillum(1), rcollate(1), rcontrib(1),
+rfluxmtx(1), rmtxop(1), rtrace(1), vwrays(1)
